--- a/css/main.css
+++ b/css/main.css
@@ -446,7 +446,7 @@ header {
     height: 100%;
     top: 0;
     width: 100%;
-    z-index: 10;
+    z-index: 100;
   }
 }
 
@@ -458,7 +458,7 @@ header {
   width: 44px;
   height: 44px;
   position: absolute;
-  z-index: 11;
+  z-index: 101;
   top: 0;
   right: 10px;
   text-align: center;
@@ -902,6 +902,16 @@ footer a {
 }
 .small-intro p {
   margin-top: 0;
+}
+
+.used-in .salad-list {
+  background-color: inherit;
+}
+.used-in .salad-list li {
+  border: 0;
+}
+.used-in .salad {
+  width: 50%;
 }
 
 .vin-list {
